discussion/kv_engine/144494/144494_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39292: 4/n Detect change of immutable property

When updating vbuckets to new/current manifest, compare
all properties of the scope/collection. If for example
the name is not equal use the new
'ImmutablePropertyModified' status to flag such a case.

In the case of a force=true manifest, react to the status
by recreating the collection (with new properties).

Change-Id: I158dfd42cde1112f795d8d9c33574c4c3a5a81c3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-02-01 15:22:06.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-01 15:49:13.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6857/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:373:59: error: no member named "name" in "SingleThreadedRCPtr<const Collections::VB::ScopeSharedMetaData, const Collections::VB::ScopeSharedMetaData *, std::default_delete<const Collections::VB::ScopeSharedMetaData> >"; did you mean to use "->" instead of "."? [clang-diagnostic-error]
            isImmutablePropertyModified(itr->second, entry.name)) {
                                                          ^
                                                          ->
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:693:66: error: no member named "name" in "SingleThreadedRCPtr<const Collections::VB::ScopeSharedMetaData, const Collections::VB::ScopeSharedMetaData *, std::default_delete<const Collections::VB::ScopeSharedMetaData> >"; did you mean to use "->" instead of "."? [clang-diagnostic-error]
                   isImmutablePropertyModified(itr->second, entry.name)) {
                                                                 ^
                                                                 ->

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6857/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:373:59:
error: no member named "name" in "SingleThreadedRCPtr<const Collections::VB::ScopeSharedMetaData, const Collections::VB::ScopeSharedMetaData *, std::default_delete<const Collections::VB::ScopeSharedMetaData> >"; did you mean to use "->" instead of "."? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6857/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33307/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\collections\vbucket_manifest.cc(373): error C2039: "name": is not a member of "SingleThreadedRCPtr<const Collections::VB::ScopeSharedMetaData,T *,std::default_delete<T>>" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33307/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28654/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:373:59:
error: no member named "name" in "SingleThreadedRCPtr<const Collections::VB::ScopeSharedMetaData, const Collections::VB::ScopeSharedMetaData *, std::default_delete<const Collections::VB::ScopeSharedMetaData> >"; did you mean to use "->" instead of "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28654/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7484/ : FAILURE

Compile error at [2021-02-01T15:27:17.527Z] ../kv_engine/engines/ep/src/collections/vbucket_manifest.cc:373:59:
error: no member named "name" in "SingleThreadedRCPtr<const Collections::VB::ScopeSharedMetaData, const Collections::VB::ScopeSharedMetaData *, std::__1::default_delete<const Collections::VB::ScopeSharedMetaData> >"; did you mean to use "->" instead of "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7484/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8779/ : FAILURE

Compile error at [2021-02-01T15:37:36.595Z] ../kv_engine/engines/ep/src/collections/vbucket_manifest.cc:373:59:
error: no member named "name" in "SingleThreadedRCPtr<const Collections::VB::ScopeSharedMetaData, const Collections::VB::ScopeSharedMetaData *, std::default_delete<const Collections::VB::ScopeSharedMetaData> >"; did you mean to use "->" instead of "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8779/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16328/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8535/ : FAILURE

Compile error at [2021-02-01T15:28:51.337Z] ../kv_engine/engines/ep/src/collections/vbucket_manifest.cc:373:60:
error: ?std::tuple_element<1, const std::pair<const ScopeID, SingleThreadedRCPtr<const Collections::VB::ScopeSharedMetaData> > >::type {aka const class SingleThreadedRCPtr<const Collections::VB::ScopeSharedMetaData>}? has no member named ?name?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8535/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8402/ : FAILURE

Compile error at [2021-02-01T15:44:29.466Z] ../kv_engine/engines/ep/src/collections/vbucket_manifest.cc:373:60:
error: ?std::tuple_element<1, const std::pair<const ScopeID, SingleThreadedRCPtr<const Collections::VB::ScopeSharedMetaData> > >::type {aka const class SingleThreadedRCPtr<const Collections::VB::ScopeSharedMetaData>}? has no member named ?name?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8402/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5393/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
